@startuml

entity aktor {
    * id
    --
    nama_depan
    nama_belakang
    email
    id_biodata_aktor << FK >>
}

entity biodata_aktor {
    * id
    --
    instagram
    alamat
    hobi
}

entity produser {
    * id
    --
    nama
    kota
}

entity film {
    * id
    --
    judul
    * id_produser <<FK>>
}

entity review {
    * id
    --
    komentar
    * id_film
}

entity aktor_film {
    * id_aktor
    --
    * id_film
}

aktor ||--|| biodata_aktor
produser ||--|{ film
film ||--|{ review
aktor_film }|--|{ film
aktor_film }|--|{ aktor

@enduml